--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -2,3 +2,8 @@ jane:
   name: Jane
   email: jane@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+
+bob:
+  name: Bob
+  email: bob@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
