--- a/config/database.yml
+++ b/config/database.yml
@@ -5,14 +5,14 @@ default: &default
 
 development:
   <<: *default
-  database: standup_development
+  database: standfast_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: standup_test
+  database: standfast_test
 
 production:
   <<: *default
