Add a "handled" response fixture
Note that one of our tests was relying on the seat not having any
responses. To get around that, we’ve changed which fixture we were
using in that case.

--- a/spec/fixtures/responses.yml
+++ b/spec/fixtures/responses.yml
@@ -1,3 +1,9 @@
+jane_blue_team_adam_seat_response_1:
+  handled: Yes
+  seat: jane_blue_team_adam_seat
+  body: |
+    Stuff
+
 jane_blue_team_ryan_seat_response_1:
   handled: No
   seat: jane_blue_team_ryan_seat
