--- a/spec/fixtures/teams.yml
+++ b/spec/fixtures/teams.yml
@@ -1,15 +1,15 @@
 bob_black_team:
   name: black
-  user: bob
+  account: bob_account
 
 bob_pink_team:
   name: pink
-  user: bob
+  account: bob_account
 
 jane_blue_team:
   name: blue
-  user: jane
+  account: jane_account
 
 jane_red_team:
   name: red
-  user: jane
+  account: jane_account
