--- a/spec/fixtures/users.yml
+++ b/spec/fixtures/users.yml
@@ -1,7 +1,14 @@
 jane:
+  account: jane_account
   email: jane@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
 
 bob:
+  account: bob_account
   email: bob@example.com
+  encrypted_password: <%= User.new.send(:password_digest, 'password') %>
+
+bill:
+  account: bob_account
+  email: bill@example.com
   encrypted_password: <%= User.new.send(:password_digest, 'password') %>
