--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "yarn": "^0.17.9"
   },
   "devDependencies": {
+    "browserify-incremental": "^3.1.1"
+  },
+  "dependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "browserify-incremental": "^3.1.1"
+    "browserify": "^13.1.1"
   }
 }
