--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "yarn": "^0.17.9"
   },
   "devDependencies": {
-    "browserify-incremental": "^3.1.1"
+    "browserify-incremental": "^3.1.1",
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.0"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
