--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "devDependencies": {
     "browserify-incremental": "^3.1.1",
     "karma": "^1.3.0",
-    "karma-browserify": "^5.1.0"
+    "karma-browserify": "^5.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-jasmine": "^1.0.2"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
