--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
-    "karma-jasmine": "^1.0.2"
+    "karma-jasmine": "^1.0.2",
+    "watchify": "^3.7.0"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
