--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "node": "^7.2.0",
     "yarn": "^0.17.9"
   },
+  "scripts": {
+    "test": "./node_modules/karma/bin/karma start --auto-watch"
+  },
   "devDependencies": {
     "browserify-incremental": "^3.1.1",
     "jasmine-core": "^2.5.2",
