--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-jasmine": "^1.0.2",
+    "karma-mocha-reporter": "^2.2.1",
     "watchify": "^3.7.0"
   },
   "dependencies": {
