--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "./node_modules/karma/bin/karma start --auto-watch"
   },
   "devDependencies": {
-    "browserify-incremental": "^3.1.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
@@ -21,6 +20,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
-    "browserify": "^13.1.1"
+    "browserify": "^13.1.1",
+    "browserify-incremental": "^3.1.1"
   }
 }
