--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "./node_modules/karma/bin/karma start --auto-watch"
   },
   "devDependencies": {
+    "eslint": "^3.11.1",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
