--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,7 +11,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "double", {"avoidEscape": true}],
     "semi": ["error", "never"]
   }
 }
