--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
   "rules": {
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
+    "no-var": "error",
     "quotes": ["error", "double", {"avoidEscape": true}],
     "semi": ["error", "never"]
   }
