--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,9 +9,12 @@
     "sourceType": "module"
   },
   "rules": {
+    "array-bracket-spacing": ["error", "never"],
+    "key-spacing": ["error", {"mode": "strict"}],
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
     "no-var": "error",
+    "object-curly-spacing": ["error", "never"],
     "quotes": ["error", "double", {"avoidEscape": true}],
     "semi": ["error", "never"]
   }
