Enforce providing a radix to `parseInt`
Prevents accidentally using a base (or radix) of something other than
10.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-var": "error",
     "object-curly-spacing": ["error", "never"],
     "quotes": ["error", "double", {"avoidEscape": true}],
+    "radix": ["error", "always"],
     "semi": ["error", "never"]
   }
 }
