--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
     "karma-chrome-launcher": "^2.0.0",
+    "karma-eslint": "^2.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.2.1",
     "watchify": "^3.7.0"
