Don't enforce top-level documentation comments of class and modules

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,9 @@ Metrics/LineLength:
 Style/BracesAroundHashParameters:
   Enabled: false
 
+Style/Documentation:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
