--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -5,6 +5,8 @@ AllCops:
     - config.ru
     - lib/**/*.rake
   Exclude:
+    - config/**/*.rb
+    - bin/*
     - db/schema.rb
     - spec/rails_helper.rb
     - spec/spec_helper.rb
