--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,10 +11,7 @@ AllCops:
     - spec/rails_helper.rb
     - spec/spec_helper.rb
 
-Metrics/BlockLength:
-  Enabled: false
-
-Metrics/LineLength:
+Metrics:
   Enabled: false
 
 Style/BracesAroundHashParameters:
