Use a consistent hash indentation style

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -32,6 +32,10 @@ Style/GuardClause:
 Style/IfUnlessModifier:
   Enabled: false
 
+Style/IndentHash:
+  EnforcedStyle: consistent
+  Enabled: true
+
 Style/NumericPredicate:
   Enabled: false
 
