--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
   },
   "rules": {
     "array-bracket-spacing": ["error", "never"],
+    "comma-dangle": ["error", {"arrays": "always-multiline", "objects": "always-multiline"}],
     "key-spacing": ["error", {"mode": "strict"}],
     "indent": ["error", 2],
     "linebreak-style": ["error", "unix"],
