--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,6 +42,11 @@ Style/FrozenStringLiteralComment:
 Style/GuardClause:
   Enabled: false
 
+# Allow old-school hash rocket syntax with symbols. Also enforce consistency.
+Style/HashSyntax:
+  EnforcedStyle: no_mixed_keys
+  Enabled: true
+
 # Don't force shorter conditional statements to be on one line.
 Style/IfUnlessModifier:
   Enabled: false
