Turn off the hash rocket check for rubocop
Running with this cop on with `no_mixed_keys` results in an exception
for certain files:

```
undefined method `loc' for nil:NilClass
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/style/hash_syntax.rb:124:in `no_mixed_keys_check'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/style/hash_syntax.rb:88:in `on_hash'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:41:in `block (2 levels) in on_hash'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:96:in `with_cop_error_handling'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:40:in `block in on_hash'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:39:in `each'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:39:in `on_hash'
(eval):3:in `on_optarg'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:45:in `on_optarg'
(eval):2:in `block in on_args'
(eval):2:in `each'
(eval):2:in `on_args'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:45:in `on_args'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
ast_node/traversal.rb:152:in `on_block'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:45:in `on_block'
(eval):2:in `block in on_begin'
(eval):2:in `each'
(eval):2:in `on_begin'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:45:in `on_begin'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
ast_node/traversal.rb:12:in `walk'
/Users/andrew/workspace/standfast/.gems/gems/rubocop-0.46.0/lib/rubocop/
cop/commissioner.rb:58:in `investigate'
/Users/andrew/workspace/standfast/.gems/gems/ruboco

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -42,10 +42,12 @@ Style/FrozenStringLiteralComment:
 Style/GuardClause:
   Enabled: false
 
-# Allow old-school hash rocket syntax with symbols. Also enforce consistency.
+# Allow old-school hash rocket syntax with symbols. Would like to turn this on
+# to enforce consistency. However, an error gets thrown from rubocop when this
+# is turned on.
 Style/HashSyntax:
   EnforcedStyle: no_mixed_keys
-  Enabled: true
+  Enabled: false
 
 # Don't force shorter conditional statements to be on one line.
 Style/IfUnlessModifier:
