--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": "^0.17.9"
   },
   "scripts": {
-    "test": "./node_modules/karma/bin/karma start"
+    "test": "./node_modules/karma/bin/karma start --auto-watch"
   },
   "devDependencies": {
     "eslint": "^3.11.1",
