Don't load the lint tasks in production
We’re not loading the rubocop gem in production, so it blows up if the
task is loaded.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -76,3 +76,8 @@ Style/StringLiterals:
 Style/TrailingCommaInLiteral:
   EnforcedStyleForMultiline: comma
   Enabled: true
+
+# Don't enforce unless instead of !if. Oftentimes unless is difficult for me to
+# understand.
+Style/NegatedIf:
+  Enabled: false
