--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "yarn": "^0.17.9"
   },
   "scripts": {
-    "lint": "node_modules/.bin/eslint app/assets/javascripts/**/*.js spec/javascripts/**/*.js",
+    "lint": "./node_modules/.bin/eslint app/assets/javascripts/**/*.js spec/javascripts/**/*.js",
     "test": "./node_modules/karma/bin/karma start --single-run",
     "watch": "./node_modules/karma/bin/karma start --auto-watch"
   },
