--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "rules": {
+    "color-no-hex": true,
+    "declaration-block-properties-order": "alphabetical",
+    "declaration-no-important": true,
+    "no-browser-hacks": true,
+    "string-quotes": "double"
+  }
 }
