--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "yarn": "^0.17.10"
   },
   "scripts": {
-    "lint-js": "./node_modules/.bin/eslint app/assets/javascripts/**/*.js spec/javascripts/**/*.js",
-    "lint-style": "./node_modules/.bin/stylelint app/assets/stylesheets/**/*.scss lib/assets/stylesheets/**/*.scss --syntax scss",
+    "lint": "./node_modules/.bin/eslint app/assets/javascripts/**/*.js spec/javascripts/**/*.js",
     "test": "./node_modules/karma/bin/karma start --single-run",
     "watch": "./node_modules/karma/bin/karma start --auto-watch"
   },
@@ -20,8 +19,6 @@
     "karma-eslint": "^2.1.0",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.2.1",
-    "stylelint": "^7.6.0",
-    "stylelint-config-standard": "^15.0.0",
     "watchify": "^3.7.0"
   },
   "dependencies": {
