--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "eslint": "^3.11.1",
+    "flow-bin": "^0.37.4",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-browserify": "^5.1.0",
