--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "watchify": "^3.7.0"
   },
   "dependencies": {
+    "babel-plugin-transform-flow-strip-types": "^6.21.0",
     "babel-preset-es2015": "^6.18.0",
     "babelify": "^7.3.0",
     "browserify": "^13.1.1",
