--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "watch": "./node_modules/karma/bin/karma start --auto-watch"
   },
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
     "eslint": "^3.11.1",
+    "eslint-plugin-flowtype": "^2.29.2",
     "flow-bin": "^0.37.4",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
