Make the `spec` rake task also test Javascripts
Note that making this change requires us to change one of our lint
rules. It didn’t like the array of strings with the brackets syntax.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -84,3 +84,7 @@ Style/TrailingCommaInLiteral:
 # understand.
 Style/NegatedIf:
   Enabled: false
+
+# Don't enforce using sigil and parens syntax for arrays of words.
+Style/WordArray:
+  Enabled: false
